--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-card-news></app-card-news>
+<app-button [label]="buttonLabel"></app-button>
+<app-button [label]="buttonSecond"></app-button>
+<app-button label="Olá, Mundo"></app-button>
