Novos componentes de novas lições

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-button [label]="buttonLabel"></app-button>
 <app-button [label]="buttonSecond"></app-button>
 <app-button label="Olá, Mundo"></app-button>
+<app-entry-data></app-entry-data>
